# DataMiningCourse

./: .gitignore  CMakeLists.txt  LICENSE  find.cpp  fly.cpp  main.cpp
DataHandler/: Handler.cpp  Handler.h  Trim.h
DataReader/: CMakeLists.txt  DataReader.h  FileDataReader.cpp  FileDataReader.h
ThreadPool/: ThreadPool.h
